# gdgoc

./: .env.example  .firebaserc  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.gcf  README.md  REVIEW.md  cors.json  firebase.config.example.ts  firestore.rules
.github/workflows/: ci.yml  deploy.yml
backend/: Cargo.toml
backend/src/: auth.rs  firestore.rs  kms.rs  main.rs  otp.rs  storage.rs  vertex_ai.rs
docs/: design-system-development-spec.md  mathematical-model.md  setup-guide.md  ui-development-spec.md
doctor/: .env.local.example  index.html  package-lock.json  package.json  tsconfig.json  upload.html  upload.js  vite.config.ts
doctor/src/: api.ts  firebase.ts  main.ts  monitor.ts  sessions.ts  styles.css  toast.ts  upload.ts
doctor/src-tauri/: Cargo.toml  tauri.conf.json
doctor/src-tauri/icons/: icon.icns
doctor/src-tauri/src/: main.rs
patient/: .env.local.example  index.html  package-lock.json  package.json
patient/src/: api.ts  attention-model.ts  config.ts  document.ts  firebase.ts  gaze-score.ts  head-score.ts  index.ts  main.ts  mouse-score.ts  styles.css  sync.ts  temporal-filter.ts  types.ts  weight-calculator.ts
shared/: Cargo.toml
shared/components/: Button.ts  Modal.ts
shared/src/: lib.rs
shared/styles/: base.css  tokens.css
training/: .gitignore  pyproject.toml
training/configs/: distill.yaml
training/notebooks/: train_colab.ipynb
training/src/: cache_teacher.py  distill.py  export_onnx.py  train.py
training/src/data/: __init__.py  gaze360.py  mpiifacegaze.py
training/src/models/: __init__.py  student.py  teacher.py
(+41 files in other folders)
