[project]
name = "l2cs-distill"
version = "0.1.0"
description = "Knowledge distillation: L2CS-Net (ResNet50) → MobileNetV3-Small for browser gaze estimation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "timm>=1.0",
    "wandb>=0.17",
    "onnx>=1.15",
    "onnxruntime>=1.17",
    "opencv-python-headless>=4.9",
    "omegaconf>=2.3",
    "gdown>=5.1",
    "scipy>=1.12",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
train = "src.train:main"
export-onnx = "src.export_onnx:main"
